fix bug in cards

--- a/onas.html
+++ b/onas.html
@@ -6,14 +6,16 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body>
- 
+    <div class="container-onas">
         <p>„To jest Manchester United Football Club, to jest Teatr Marzeń” – od tej frazy wypowiedzianej przez sir Bobby’ego Charltona, niezwykle znamienitą postać i wielką legendę nie tylko United ale w ogóle angielskiego i światowego futbolu wzięło się zwyczajowe, nieco górnolotne określenie piłkarskiego stadionu Old Trafford w Manchesterze. Dla milionów ludzi na całym świecie ten obiekt stanowi jednak prawdziwy Teatr Marzeń, ponieważ wizyta w tym miejscu oznacza spełnienia jednego z największych, życiowych marzeń. Jeśli jesteś członkiem/członkinią tej gigantycznej, ogólnoświatowej społeczności dla której Manchester United to pasja, a Old Trafford swoista „Mekka” i chciałbyś/chciałabyś się tam znaleźć razem z innymi osobami, które podzielają Twój punkt widzenia, trafiłeś/trafiłaś pod właściwy adres!
             Było jesienne, sobotnie popołudnie. Dokładnie 8 listopada 2014 roku. Pierwsze miesiące kadencji Luisa van Gaala. Z wizytą do Manchesteru przyjechało londyńskie Crystal Palace. Ot, kolejna ligowa młócka zakończona zwycięstwem Czerwonych Diabłów 1:0 za sprawą bramki Juana Maty z rzutu wolnego. Większość fanów zapewne już dawno zapomniała to pozbawione większej historii spotkanie lecz nie wszyscy. Dla niektórych był to niezapomniany dzień. Był to właśnie ten dzień gdy z naszą pomocą spełnił się ich kibicowski sen. Wtedy bowiem rozpoczęliśmy naszą działalność. 
             Od tamtego czasu zorganizowaliśmy już ponad sto wyjazdów na mecze Manchesteru United w różnych rozgrywkach! Premier League, puchary krajowe i europejskie, a nawet spotkania towarzyskie. Mecze z kopciuszkami, średniakami i potentatami. Konfrontacje z Chelsea, Arsenalem, Tottenhamem. Derbowe batalie z Manchesterem City i Liverpoolem. Szlagierowe pojedynki w Lidze Mistrzów. Wszystko to znajduje się w naszej ofercie. Załatwiamy przeloty w obie strony oraz hotel zlokalizowany bardzo blisko Old Trafford. W ramach wyjazdu prócz obejrzenia z trybun meczu, umożliwiamy również  wzięcie udziału w zorganizowanej wycieczce po stadionie a także wstęp do bogatego w pamiątki i trofea klubowego muzeum. Gwarantujemy ponadto opiekę doświadczonego przewodnika i co najistotniejsze – zawsze wyśmienitą atmosferę w grupie. 
             Chcesz poczuć klimat piłkarskiego święta na Wyspach? Zapach wspaniałej historii ulatniający się z każdego zakątka Old Trafford? Uczucie gęsiej skórki gdy jesteś częścią ponad 70-tysięcznego tłumu zmierzającego w to samo miejsce i w tym samym celu? Chcesz zobaczyć z bliska piłkarskie gwiazdy? Chcesz  zrobić sobie zdjęcie pod pomnikami Fergusona, Busby’ego bądź legendarnego tercetu: Best – Law – Charlton? Wreszcie chcesz przeżyć kilka fantastycznych dni we wspaniałym gronie osób z którymi łączą Cię pasja i marzenie? Zapraszamy do kontaktu z nami.
-            </p>
+        </p>
+    </div>
 </body>
 </html>
