--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         </div>
                       </div>  
         <div class="section"><a name="section">WYJAZDY</div></a>
+        <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
