add new card match, add felieton.html and felieton.css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                         <li><a href="" name="home">HOME</a></li>
                         <li><a href="onas.html">O NAS</a></li>
                         <li><a href="#section">WYJAZDY</a></li>
+                        <li><a href="felieton.html">FELIETON</a></li>
                         <li><a href="kontakt.html">KONTAKT</a></li>
                     </ul>
                 </nav>
@@ -73,7 +74,7 @@
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
                             <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="img/Burnley.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/PL_no_places_PNG.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h5 class="card-title">vs. Burnley</h5>
                                             <p class="card-text">OLD TRAFFORD
@@ -99,7 +100,7 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/PSG.jpg" alt="Card image cap">
+                                        <img class="card-img-top" src="img/CL_no_places_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. PSG</h5>
                                                     <p class="card-text">OLD TRAFFORD
@@ -112,7 +113,7 @@
                          <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/Liverpool.jpg" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_no_places_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Liverpool</h5>
                                                     <p class="card-text">OLD TRAFFORD 
@@ -125,7 +126,7 @@
                          <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/Southampton.jpg" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_no_places_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Southampton</h5>
                                                     <p class="card-text">OLD TRAFFORD
@@ -138,7 +139,7 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/City.jpg" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_no_places_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Manchester City</h5>
                                                      <p class="card-text">OLD TRAFFORD
@@ -148,6 +149,32 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col">
+                                    <div class="shadow p-3 mb-5 bg-white rounded">
+                                        <div class="card" style="width: 18rem;">
+                                            <img class="card-img-top" src="img/Watford.jpg" alt="Card image cap">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">vs. Watford</h5>
+                                                         <p class="card-text">OLD TRAFFORD
+                                                                        <br>30/03/2019</p>
+                                                             <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="shadow p-3 mb-5 bg-white rounded">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="img/Cardiff.jpg" alt="Card image cap">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">vs. Cardiff City</h5>
+                                                             <p class="card-text">OLD TRAFFORD
+                                                                            <br>12/05/2019</p>
+                                                                 <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
+                                                     </div>
+                                                </div>
+                                            </div>
+                                        </div>
                             </div>
                         </div>
         <div class="foot"><a name="foot"></a></div>
