--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <div class="circles"><a href="javascript:scroll(0,0)">
+          <div class="circles"><a href="#home">
                 <div class="circles-text">^</div></a>
             </div>
                     <div class="container">
