change matches status

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col">
                         <div class="shadow p-3 mb-5 bg-white rounded">
                             <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="img/PL_no_places_PNG.png" alt="Card image cap">
+                                <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h5 class="card-title">vs. Burnley</h5>
                                             <p class="card-text">OLD TRAFFORD
@@ -87,7 +87,7 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/Fulham.jpg" alt="Card image cap">
+                                        <img class="card-img-top" src="img/PL_too_late_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Fulham</h5>
                                                     <p class="card-text">CRAVEN COTTAGE
@@ -100,7 +100,7 @@
                         <div class="col">
                                 <div class="shadow p-3 mb-5 bg-white rounded">
                                     <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/CL_no_places_PNG.png" alt="Card image cap">
+                                        <img class="card-img-top" src="img/CL_too_late_PNG.png" alt="Card image cap">
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. PSG</h5>
                                                     <p class="card-text">OLD TRAFFORD
@@ -143,7 +143,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">vs. Manchester City</h5>
                                                      <p class="card-text">OLD TRAFFORD
-                                                                    <br>16/03/2019</p>
+                                                                    <br>24/03/2019</p>
                                                          <a href="mailto:mufc.wyjazdy@gmail.com"  class="btn btn-primary">Zapisz się</a>
                                              </div>
                                         </div>
